# termmux

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: main.rs  mux.rs  utils.rs
tests/: main.rs  mux.rs
